Small set corrections and content addings are completed

--- a/design.html
+++ b/design.html
@@ -382,15 +382,16 @@
             <!-- featured products start -->
             <section class="projects-section">
                 <div class="heading">
-                    <h4 style="margin-bottom: -15px; color: #972221; font-size: 2.5rem;">Featured Projects</h4>
-                    <h1 style="font-size: 1.5rem; margin-top: 8px">The Proof is in<br> our portfolio !</h1>
+                    <h4 style="margin-bottom: -15px; color: #972221; font-size: 2.5rem;margin-bottom: 10px;">Featured
+                        Projects</h4>
+                    <!-- <h1 style="font-size: 1.5rem; margin-top: 8px">The Proof is in<br> our portfolio !</h1> -->
                 </div>
-                <div class="heading2s">
+                <!-- <div class="heading2s">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         <br>Fuga quas molestiae aut quam, eligendi quod veritatis sapiente.
                         <br>Provident saepe numquam quis quibusdam, laborum maxime quas .
                     </p>
-                </div>
+                </div> -->
 
                 <div class="divider"></div>
 
@@ -433,7 +434,7 @@
                                     d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
                                 </path>
                             </svg>
-                            <span class="text2">Brand Guidelines</span>
+                            <span class="text2">Branding and Guidelines</span>
                             <span class="circle"></span>
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
                                 <path
@@ -441,6 +442,7 @@
                                 </path>
                             </svg>
                         </button>
+
 
                         <button class="animated-button" onclick="window.open('./pdfs/kimiri.pdf', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
@@ -486,21 +488,27 @@
                         </div>
                     </div>
                     <div class="but-mid">
-                        <button class="animated-button" onclick="window.open('./pdfs/brand-book', '_blank')">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                            <span class="text2">Brand GuideLines</span>
-                            <span class="circle"></span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                        </button>
-
+                        <div class="dropdown">
+                            <button class="animated-button" onclick="window.open('./pdfs/brand-book.pdf', '_blank')">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
+                                    <path
+                                        d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                    </path>
+                                </svg>
+                                <span class="text2">Brand GuideLines</span>
+                                <span class="circle"></span>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
+                                    <path
+                                        d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                    </path>
+                                </svg>
+                            </button>
+                            <div class="dropdown-content">
+                                <a href="#">Social Media</a>
+                                <a href="#">Content</a>
+                                <a href="#">Strategy</a>
+                            </div>
+                        </div>
                         <button class="animated-button" onclick="window.open('./pdfs/naturalz.pdf', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
                                 <path
@@ -620,7 +628,7 @@
                 <div class="vertical-video-container" style="position: relative;height: auto;">
                     <div class="video-container-abc" style="position: absolute;top: 0;bottom: 0;">
                         <video id="video" autoplay loop muted class="video" style="height: 100%;">
-                            <source src="video/team-video.mp4" type="video/mp4">
+                            <source src="video/branding-hero.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
