--- a/home-1.html
+++ b/home-1.html
@@ -315,9 +315,6 @@
                                                     data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
                                                         <h5>Alpro</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
@@ -341,9 +338,6 @@
                                                     data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
                                                         <h5>Godiva</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
@@ -367,9 +361,6 @@
                                                     data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
                                                         <h5>Guinness</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
@@ -394,9 +385,6 @@
                                                     data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
                                                         <h5>Plantaholic</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
@@ -420,9 +408,6 @@
                                                     data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
                                                         <h5>Godiva</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
@@ -446,9 +431,6 @@
                                                     data-swiper-parallax-opacity="0">
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
                                                         <h5>OMA</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
@@ -812,112 +794,76 @@
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
                                                 data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10 mil-maroon">Sarah Newman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
-                                                <p class="mil-text-xl mil-up">This creative agency stands out with their
-                                                    exceptional talent and expertise. Their ability to think outside the
-                                                    box
-                                                    and
-                                                    bring unique ideas to life is truly impressive. With meticulous
-                                                    attention to
-                                                    detail, they consistently deliver visually stunning and impactful
-                                                    work.
+                                                <h5 class="mil-up mil-mb-10 mil-maroon">Alpro</h5>
+                                                <!-- <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p> -->
+                                                <p class="mil-text-xl mil-up">
+                                                    Food on Focus Media Team exceeded our expectations for our Alpro
+                                                    Milk brand. Their creativity and professionalism brought our vision
+                                                    to life, capturing the freshness and quality of our product
+                                                    perfectly. We’re thrilled with the results and excited to
+                                                    collaborate again!
                                                 </p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
                                                 data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10 mil-maroon">Emma Trueman</h5>
+                                                <h5 class="mil-up mil-mb-10 mil-maroon">Talabat</h5>
                                                 <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
-                                                <p class="mil-text-xl mil-up">I had the pleasure of working with this
-                                                    creative
-                                                    agency, and I must say, they truly impressed me. They consistently
-                                                    think
-                                                    outside the box, resulting in impressive and impactful work. I
-                                                    highly
-                                                    recommend this agency for their consistent delivery of exceptional
-                                                    creative
-                                                    solutions.</p>
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
-                                                data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10 mil-maroon">Sarah Newman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
-                                                <p class="mil-text-xl mil-up">This creative agency stands out with their
-                                                    exceptional talent and expertise. Their ability to think outside the
-                                                    box
-                                                    and
-                                                    bring unique ideas to life is truly impressive. With meticulous
-                                                    attention to
-                                                    detail, they consistently deliver visually stunning and impactful
-                                                    work.
+                                                <p class="mil-text-xl mil-up">
+                                                    Partnering with Food on Focus Media for our photography and
+                                                    videography was a fantastic experience.Their professionalism,
+                                                    creativity, and attention to detail brought Talabat’s vision to life
+                                                    with stunning visuals and impactful storytelling. The results
+                                                    exceeded expectations and were highly praised. We highly recommend
+                                                    Food on Focus for their exceptional work.
                                                 </p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
                                                 data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10 mil-maroon">Emma Trueman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
-                                                <p class="mil-text-xl mil-up">I had the pleasure of working with this
-                                                    creative
-                                                    agency, and I must say, they truly impressed me. They consistently
-                                                    think
-                                                    outside the box, resulting in impressive and impactful work. I
-                                                    highly
-                                                    recommend this agency for their consistent delivery of exceptional
-                                                    creative
-                                                    solutions.</p>
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
-                                                data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10 mil-maroon">Sarah Newman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
-                                                <p class="mil-text-xl mil-up">This creative agency stands out with their
-                                                    exceptional talent and expertise. Their ability to think outside the
-                                                    box
-                                                    and
-                                                    bring unique ideas to life is truly impressive. With meticulous
-                                                    attention to
-                                                    detail, they consistently deliver visually stunning and impactful
-                                                    work.
+                                                <h5 class="mil-up mil-mb-10 mil-maroon">Plantoholic</h5>
+                                                <!-- <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p> -->
+                                                <p class="mil-text-xl mil-up">
+                                                    Food on Focus Media brought Plantoholic to life with unmatched
+                                                    creativity and precision, from ideating the brand and designing a
+                                                    unique logo to delivering breathtaking visuals through photography,
+                                                    videography, and 3D design for the restaurant. They went above and
+                                                    beyond by crafting personalized Plantoholic products, turning our
+                                                    dream into a stunning reality and making the brand truly
+                                                    one-of-a-kind.
                                                 </p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
                                                 data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10 mil-maroon">Emma Trueman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
-                                                <p class="mil-text-xl mil-up">I had the pleasure of working with this
-                                                    creative
-                                                    agency, and I must say, they truly impressed me. They consistently
-                                                    think
-                                                    outside the box, resulting in impressive and impactful work. I
-                                                    highly
-                                                    recommend this agency for their consistent delivery of exceptional
-                                                    creative
-                                                    solutions.</p>
+                                                <h5 class="mil-up mil-mb-10 mil-maroon">OMA</h5>
+                                                <!-- <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p> -->
+                                                <p class="mil-text-xl mil-up">
+                                                    Food on Focus Media delivered exceptional dessert photography and
+                                                    videography for OMA. Their creativity, attention to detail, and
+                                                    ability to align visuals with our brand were outstanding. The team
+                                                    was professional, efficient, and a pleasure to work with. The
+                                                    stunning results exceeded our expectations, bringing our desserts to
+                                                    life. Highly recommended!
+
+                                                </p>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="mil-review-frame mil-center" data-swiper-parallax="-200"
                                                 data-swiper-parallax-opacity="0">
-                                                <h5 class="mil-up mil-mb-10 mil-maroon">Sarah Newman</h5>
-                                                <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p>
-                                                <p class="mil-text-xl mil-up">This creative agency stands out with their
-                                                    exceptional talent and expertise. Their ability to think outside the
-                                                    box
-                                                    and
-                                                    bring unique ideas to life is truly impressive. With meticulous
-                                                    attention to
-                                                    detail, they consistently deliver visually stunning and impactful
-                                                    work.
+                                                <h5 class="mil-up mil-mb-10 mil-maroon">Godiva</h5>
+                                                <!-- <p class="mil-mb-5 mil-upper mil-up mil-mb-30">Envato market</p> -->
+                                                <p class="mil-text-xl mil-up">
+                                                    Godiva partnered with Food on Focus Media for e-commerce
+                                                    photography, and the results were outstanding. Their expertise
+                                                    perfectly captured the elegance and indulgence of our chocolates,
+                                                    showcasing the premium quality and luxury our brand represents. The
+                                                    team made the experience seamless, delivering stunning images that
+                                                    truly embody sophistication. We couldn’t be happier!
                                                 </p>
                                             </div>
                                         </div>
@@ -932,7 +878,7 @@
                 <!-- reviews end -->
 
                 <!-- partners -->
-                <div class="mil-soft-bg" id="partners-section">
+                <!-- <div class="mil-soft-bg" id="partners-section">
                     <div class="container">
 
                         <div class="swiper-container mil-infinite-show mil-up">
@@ -961,7 +907,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div> -->
                 <!-- partners end -->
 
                 <!-- blog -->
