--- a/team.html
+++ b/team.html
@@ -216,7 +216,7 @@
                                 <!-- <li><a href=""></a></li>
                                 <li><a href=""></a></li> -->
                             </ul>
-                            <h1 class="mil-mb-60">Meet <span class="mil-thin">Our</span><br> Creative <span
+                            <h1 class="mil-mb-60 mil-maroon">Meet <span class="mil-thin">Our</span><br> Creative <span
                                     class="mil-thin">Team</span></h1>
                             <a href="#team" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Our team</span>
@@ -427,7 +427,7 @@
                             </div>
                         </div>
                         <div class="mil-center">
-                            <h2 class="mil-up mil-mb-60">Ready to bring your <span class="mil-thin">ideas to</span>
+                            <h2 class="mil-up mil-mb-60 mil-maroon">Ready to bring your <span class="mil-thin">ideas to</span>
                                 life? <br> We're <span class="mil-thin">here to help</span></h2>
                             <div class="mil-up"><a href="contact.html" class="mil-button mil-arrow-place"><span>Contact
                                         us</span></a></div>
@@ -437,111 +437,33 @@
                 <!-- call to action end -->
 
                 <!-- footer -->
-                <footer class="mil-dark-bg">
-                    <div class="mi-invert-fix">
-                        <div class="container mil-p-120-60">
-                            <div class="row justify-content-between">
-                                <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">FoodOnFocus</div>
-
-                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe our newsletter:</p>
-
-                                    <form class="mil-subscribe-form mil-up">
-                                        <input type="text" placeholder="Enter our email">
-                                        <button type="submit"
-                                            class="mil-button mil-icon-button-sm mil-arrow-place"></button>
-                                    </form>
-
-                                </div>
-                                <div class="col-md-7 col-lg-6">
-                                    <div class="row justify-content-end">
-                                        <div class="col-md-6 col-lg-7">
-
-                                            <nav class="mil-footer-menu mil-mb-60">
-                                                <ul>
-                                                    <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="portfolio-1.html">Portfolio</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="services.html">Services</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="contact.html">Contact</a>
-                                                    </li>
-                                                    <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
-                                                    </li>
-                                                </ul>
-                                            </nav>
-
-                                        </div>
-                                        <div class="col-md-6 col-lg-5">
-
-                                            <ul class="mil-menu-list mil-up mil-mb-60">
-                                                <li><a href="#." class="mil-light-soft">Privacy Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Terms and conditions</a></li>
-                                                <li><a href="#." class="mil-light-soft">Cookie Policy</a></li>
-                                                <li><a href="#." class="mil-light-soft">Careers</a></li>
-                                            </ul>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row justify-content-between flex-sm-row-reverse">
-                                <div class="col-md-7 col-lg-6">
-
-                                    <div class="row justify-content-between">
-
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30">Canada</h6>
-
-                                            <p class="mil-light-soft mil-up">71 South Los Carneros Road, California
-                                                <span class="mil-no-wrap">+51 174 705 812</span>
-                                            </p>
-
-                                        </div>
-                                        <div class="col-md-6 col-lg-5 mil-mb-60">
-
-                                            <h6 class="mil-muted mil-up mil-mb-30">Germany</h6>
-
-                                            <p class="mil-light-soft mil-up">Leehove 40, 2678 MC De Lier, Netherlands
-                                                <span class="mil-no-wrap">+31 174 705 811</span>
-                                            </p>
-
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <div class="col-md-4 col-lg-6 mil-mb-60">
-
-                                    <div class="mil-vert-between">
-                                        <div class="mil-mb-30">
-                                            <ul class="mil-social-icons mil-up">
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="fab fa-behance"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="fab fa-dribbble"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="fab fa-twitter"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="fab fa-github"></i></a></li>
-                                            </ul>
-                                        </div>
-                                        <p class="mil-light-soft mil-up">© Copyright 2023 - FoodOnFocus All Rights
-                                            Reserved.</p>
-                                    </div>
-
-                                </div>
+                <footer class="footer8">
+                    <div class="container8">
+                        <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt="">
+                        </div>
+                        <ul class="media-icons8">
+                            <li><a
+                                    href="https://www.instagram.com/foodonfocusmedia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                                        class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/foodonfocus/"><i
+                                        class="fab fa-linkedin"></i></a></li>
+                            <li><a href="https://www.youtube.com/@zarakmedia/featured"><i
+                                        class="fab fa-youtube"></i></a></li>
+                        </ul>
+                        <div class="footer_adr">
+                            Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
+                            <br>
+                            <div class="txt-thin mil-maroon"><i class="fa-solid fa-phone"></i> 971 4 587 4633
+                                <br>
+                                <i class="fa-solid fa-envelope-circle-check"></i>
+                                info@foodonfocus.com
                             </div>
                         </div>
+
+
                     </div>
+                    <p id="copywright-p">All Rights Reserved | Copyright© foodonfocus.com 2024</p>
                 </footer>
                 <!-- footer end -->
 
