--- a/home-1.html
+++ b/home-1.html
@@ -317,11 +317,11 @@
                                                         data-swiper-parallax-opacity="0">
                                                         <h5>Alpro</h5>
                                                     </div>
-                                                    <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
+                                                    <!-- <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
 
@@ -340,11 +340,11 @@
                                                         data-swiper-parallax-opacity="0">
                                                         <h5>Godiva</h5>
                                                     </div>
-                                                    <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
+                                                    <!-- <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
 
@@ -363,11 +363,11 @@
                                                         data-swiper-parallax-opacity="0">
                                                         <h5>Guinness</h5>
                                                     </div>
-                                                    <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
+                                                    <!-- <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
 
@@ -387,11 +387,11 @@
                                                         data-swiper-parallax-opacity="0">
                                                         <h5>Plantaholic</h5>
                                                     </div>
-                                                    <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
+                                                    <!-- <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
 
@@ -410,11 +410,11 @@
                                                         data-swiper-parallax-opacity="0">
                                                         <h5>Godiva</h5>
                                                     </div>
-                                                    <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
+                                                    <!-- <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
 
@@ -433,11 +433,11 @@
                                                         data-swiper-parallax-opacity="0">
                                                         <h5>OMA</h5>
                                                     </div>
-                                                    <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
+                                                    <!-- <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
 
@@ -878,7 +878,7 @@
                 <!-- reviews end -->
 
                 <!-- partners -->
-                <!-- <div class="mil-soft-bg" id="partners-section">
+                <div class="mil-soft-bg" id="partners-section">
                     <div class="container">
 
                         <div class="swiper-container mil-infinite-show mil-up">
@@ -907,8 +907,8 @@
                         </div>
 
                     </div>
-                </div> -->
-                <!-- partners end -->
+                </div>
+                <!-- partners end
 
                 <!-- blog -->
                 <!-- <section>
