updated the home-html

--- a/home-1.html
+++ b/home-1.html
@@ -878,12 +878,15 @@
                 <!-- reviews end -->
 
                 <!-- partners -->
-                <div class="mil-soft-bg" id="partners-section">
-                    <div class="container">
-
-                    </div>
-                </div>
-                <!-- partners end
+                <!-- hero text -->
+                <section class="hero-heading" style="position: relative;
+                z-index: 1;
+                background-color: white;
+                height: fit-content;">
+                    <h1 style="margin: 0;">We serve as <span class="txt-thin mil-maroon">TRUSTED ADVISORS</span> for founders and growing
+                        brands</h1>
+                </section>
+                <!--partners end -->
 
                 <!-- blog -->
                 <!-- <section>
